--- a/client/package.json
+++ b/client/package.json
@@ -6,6 +6,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@elastic/react-search-ui": "^1.21.5",
+    "@elastic/search-ui-app-search-connector": "^1.21.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.2",
@@ -16,6 +18,7 @@
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
+    "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-query": "^3.39.3",
