--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.2",
+    "@react-google-maps/api": "^2.19.3",
     "@tanstack/react-query": "^5.45.0",
     "@tanstack/react-query-devtools": "^5.45.0",
     "@testing-library/jest-dom": "^5.17.0",
