--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+"@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
     "query-string": "^9.0.0",
