--- a/client/package.json
+++ b/client/package.json
@@ -20,12 +20,14 @@
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
+"lodash": "^4.17.21",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
+    "react-slider": "^2.0.6",
     "swiper": "^11.1.4",
     "web-vitals": "^2.1.4"
   },
