--- a/client/package.json
+++ b/client/package.json
@@ -6,8 +6,6 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@elastic/react-search-ui": "^1.21.5",
-    "@elastic/search-ui-app-search-connector": "^1.21.5",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
     "@fortawesome/fontawesome-free": "^6.5.2",
@@ -20,10 +18,11 @@
     "@vis.gl/react-google-maps": "^1.1.0",
     "axios": "^1.7.2",
     "js-cookie": "^3.0.5",
-"lodash": "^4.17.21",
+    "lodash": "^4.17.21",
     "query-string": "^9.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-google-charts": "^4.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
